--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "^1.5.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
-    "vue-router": "^3.6.5"
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
